comtued work on content page

--- a/lecture/09/methodology.html
+++ b/lecture/09/methodology.html
@@ -49,10 +49,9 @@
   <header>
     <h3>Why have a Methodology?</h3>    
   </header>
-
   <ul>
-  	<li><h4>Predictable:</h4>
-    	<p>
+    <li><h4>Predictable:</h4>
+      <p>
         With a solid methodology, you have a predictable set 
         of processes and tasks that you, your team, and your clients can rely on.
       </p>
@@ -638,317 +637,376 @@
   </section>
 </article>
 
-<!-- TODO: Reformat remaining content to match HTML5 established above 
-<h2>Phase 1: Definition</h2>
-<div class="content-block">
-<p>
-
-<b>Gathering Information</b></p>
-<ul>
-	<li>
+<article>
+  <header>
+    <h2>Phase 1: Definition</h2>
+  </header>  
+  <section>
+    <header>
+      <h3>Gathering Information</h3>
+    </header>    
+    <ul>
+      <li>
 	Work with your client to gather as much information as 
-	you can about their company/product/promotion</li>
-	<li>
+	you can about their company/product/promotion
+      </li>
+      <li>
 	Get all materials that they have</li>
-	<li>
+      <li>
 	Ask questions, get people engaged in discussing the 
 	latent info
  	<ul>
-
-		<li>
-		You might find that people differ on what the 
-		product/promotion actually is!</li>
+	  <li>
+	    You might find that people differ on what the 
+	    product/promotion actually is!
+	  </li>
 	</ul>
-	</li>
-	<li>
+      </li>
+      <li>
 	If a site already exists, look at current site and 
-	learn as much as you can about what is there now</li>
-	<li><b><i>
-	Become an expert in your clients business!</i></b></li>
-
-</ul>
-
-<p>
-<b>Client Questionnaire 
-(example later)</b></p>
-<ul>
-	<li>
+	learn as much as you can about what is there now
+      </li>
+      <li>
+	<strong><em>
+	  Become an expert in your clients business!
+	</em></strong>
+      </li>
+    </ul>
+  </section>
+  <section>
+    <header>
+      <h3>Client Questionnaire (example later)</h3>
+    </header>
+    <ul>
+      <li>
 	Get the client to fill out the questionnaire as much 
-	as they can.</li>
-	<li>
-	Do NOT do it with them! They might want your help, 
-	but RESIST!</li>
-	<li>
-
-	Give them a few days and come back to see how far it 
-	has gotten</li>
-	<li>
-	Most of the time, they only finish the 'stuff they 
-	know'
- 	<ul>
-		<li>
-		This serves to illustrate that YOU are the expert</li>
-		<li>
-		Help them fill out the rest</li>
-
-		<li>
-		Clarify the answers they gave you</li>
-	</ul>
-	</li>
-</ul>
-
-<p>
-<b>Understanding Your 
-Audience</b></p>
-<ul>
-	<li>
-
-	Who is your client targeting?</li>
-	<li>
+	as they can.
+      </li>
+      <li>
+        Do NOT do it with them! They might want your help, but RESIST!
+      </li>
+      <li>
+        Give them a few days and come back to see how far it has gotten
+      </li>
+      <li>
+        Most of the time, they only finish the 'stuff they know'
+        <ul>
+	  <li>
+	    This serves to illustrate that YOU are the expert
+	  </li>
+	  <li>
+	    Help them fill out the rest
+	  </li>
+	  <li>
+	    Clarify the answers they gave you
+	  </li>
+        </ul>
+      </li>
+    </ul>
+  </section>
+  <section>
+    <header>
+      <h3>Understanding Your Audience</h3>
+    </header>
+    <ul>
+      <li>
+	Who is your client targeting?
+      </li>
+      <li>
 	What ages are they? Gender? Ethnic group? Financial 
-	Status? Technical Savvy?</li>
-	<li>
-	More than one target group? Identify all of them</li>
-	<li><b>
-	Personas (also called User Profiles) (more on that later)</b></li>
-
-	<li>
-	If site exists, look at what they are doing now</li>
-</ul>
-
-<p>
-<b>Setting Goals</b></p>
-<ul>
-	<li>
+	Status? Technical Savvy?
+      </li>
+      <li>
+	More than one target group? Identify all of them
+      </li>
+      <li>
+	<strong>
+	  Personas (also called User Profiles) (more on that later)
+	</strong>
+      </li>
+      <li>
+	If site exists, look at what they are doing now
+      </li>
+    </ul>
+  </section>
+  <section>
+    <header>
+      <h3>Setting Goals</h3>
+    </header>
+    <ul>
+      <li>
 	Setting goals for the project sets up your initial 
-	Success Criteria</li>
-	<li>
-
+	Success Criteria
+      </li>
+      <li>
 	Number one question is: Why build a website? / Why 
 	redesign a website?
- 	<ul>
-		<li>
-		Goals can be: </li>
-		<li>
-		Support current business with online presence</li>
-		<li>
-		Creating online resources for clients</li>
-
-		<li>
-		Opening online sales</li>
-		<li>
-		(existing) Increase traffic</li>
-		<li>
-		(existing) Improving purchasing conversion</li>
-		<li>
-
-		(existing) Improving usability</li>
-	</ul>
-	</li>
-	<li>
+ 	<section>
+	  <header>
+	    <h4>Goals can be:</h4>  
+	  </header>
+	  <ul>
+	    <li>
+	      Support current business with online presence
+	    </li>
+	    <li>
+	      Creating online resources for clients
+	    </li>
+	    <li>
+	      Opening online sales
+	    </li>
+	    <li>
+	      (existing) Increase traffic
+	    </li>
+	    <li>
+	      (existing) Improving purchasing conversion
+	    </li>
+	    <li>
+	      (existing) Improving usability
+	    </li>
+	  </ul>
+	</section>
+      </li>
+      <li>
 	Engage the customer in these discussions. Make sure 
 	they have an understanding of what YOU see as the goals, and that you 
-	understand what THEY see as the goals. </li>
-	<li>
-	Work to join those together!</li>
-
-</ul>
-
-<h3>
-Tool: 
-Creative Brief</h3>
-<ul>
-	<li>
-	A creative brief is simply a restating of the goals of 
-	the project, and a proposal for what you believe will be required to 
-	complete the project.
- 	<ul>
-		<li>
-		No Budget</li>
-		<li>
-
-		Refined Project Goals</li>
-		<li>
-		Audience identified</li>
-		<li>
-		Visual and conceptual goals stated, but not displayed</li>
-		<li>
-		GET IT SIGNED! </li>
-
-	</ul>
-	</li>
-</ul>
-
-<ul>
-	<li>
-	Once the client has had a chance to review the Brief, 
-	they may want to make some changes</li>
-	<li>
-	Keep the brief as it is, and add an attachment that is 
-	the ADDENDUM to the Creative Brief.</li>
-
-	<li>
-	Once everyone is happy with the corrected brief, then 
-	GET IT SIGNED!</li>
-</ul>
-
-<p>
-<b>Project Team</b></p>
-<ul>
-	<li>
-	Who is the team? </li>
-	<li>
-
+	understand what THEY see as the goals.
+      </li>
+      <li>
+	Work to join those together!
+      </li>
+    </ul>
+  </section>
+  <section>
+    <header>
+      <h3>Tool: Creative Brief</h3>
+    </header>
+    <p>
+      A creative brief is simply a restating of the goals of 
+      the project, and a proposal for what you believe will be required to 
+      complete the project.
+    </p>
+    <ul>
+      <li>
+        No Budget
+      </li>
+      <li>
+	Refined Project Goals
+      </li>
+      <li>
+	Audience identified
+      </li>
+      <li>
+	Visual and conceptual goals stated, but not displayed
+      </li>
+      <li>
+	GET IT SIGNED!
+      </li>
+    </ul>
+    <p>
+      Once the client has had a chance to review the Brief, 
+      they may want to make some changes
+    </p>
+    <p>
+      Keep the brief as it is, and add an attachment that is 
+      the ADDENDUM to the Creative Brief.
+    </p>
+    <p>
+      Once everyone is happy with the corrected brief, then 
+      GET IT SIGNED!
+    </p>
+  </section>
+  <section>
+    <header>
+      <h3>Project Team</h3>
+    </header>
+    <ul>
+      <li>
+	Who is the team?
+      </li>
+      <li>
 	Are you assembling the team? Are you part of a larger 
-	team? Are you flying solo?</li>
-	<li>
+	team? Are you flying solo?
+      </li>
+      <li>
 	Who does the client have on their team? What 
-	resources are they offering?</li>
-	<li>
+	resources are they offering?
+      </li>
+      <li>
 	Establish who is doing what, and a list of tasks/roles 
-	so that when unexpected events come up, there is no finger pointing.</li>
-	<li>
-	Will there be technical requirements?</li>
-
-	<li>
-	Remember, the client is ALWAYS a team member!</li>
-</ul>
-
-<p>
-<b>Schedule</b></p>
-<ul>
-	<li>
+	so that when unexpected events come up, there is no finger pointing.
+      </li>
+      <li>
+	Will there be technical requirements?
+      </li>
+      <li>
+	Remember, the client is ALWAYS a team member!
+      </li>
+    </ul>
+  </section>
+  <section>
+    <header>
+      <h3>Schedule</h3>
+    </header>
+    <ul>
+      <li>
 	Now that you know WHO is going to do WHAT, you need to 
-	determine WHEN are they going to do it.</li>
-	<li>
-
-	Are there critical launch factors?</li>
-	<li>
-	Are there critical milestone dates?</li>
-	<li>
+	determine WHEN are they going to do it.
+      </li>
+      <li>
+	Are there critical launch factors?
+      </li>
+      <li>
+	Are there critical milestone dates?
+      </li>
+      <li>
 	Will decision makers be available? Vacation? 
-	Retiring?</li>
-	<li>
-	What are the availability levels of your team members?</li>
-
-	<li>
-	What is their workload?</li>
-	<li>
-	What are the dependencies of the project?</li>
-	<li>
+	Retiring?
+      </li>
+      <li>
+	What are the availability levels of your team members?
+      </li>
+      <li>
+	What is their workload?
+      </li>
+      <li>
+	What are the dependencies of the project?
+      </li>
+      <li>
 	Construct a list of tasks that will likely have to be 
-	done in order to complete this site. It can be rough at first.</li>
-	<li>
-
+	done in order to complete this site. It can be rough at first.
+      </li>
+      <li>
 	Next, mark each task with a likely person who will be 
-	responsible.</li>
-	<li>
+	responsible.
+      </li>
+      <li>
 	Now try and put all the tasks in chronological order, 
 	making sure that the same person cannot be working on the two tasks 
-	simultaneously.</li>
-	<li><b>
-	This is expert project management</b> 
-	- Not covered in this course, but it can be a huge challenge!!</li>
-</ul>
-
-<p>
-<b>Budget</b></p>
-<ul>
-	<li>
+	simultaneously.
+      </li>
+      <li>
+	<strong>This is expert project management</strong> - Not covered in
+	this course, but it can be a huge challenge!!
+      </li>
+    </ul>
+  </section>
+  <section>
+    <header>
+      <h3>Budget</h3>
+    </header>
+    <ul>
+      <li>
 	This is universally the most contentious part of a 
-	project.</li>
-	<li>
+	project.
+      </li>
+      <li>
 	Make sure that you have defined who the project 
-	members are, their role, and their cost (by task or by hour).</li>
-	<li>
+	members are, their role, and their cost (by task or by hour).
+      </li>
+      <li>
 	Now, with your total hours, and roles defined, just 
-	sum the total amount and use that as a guideline.</li>
-
-	<li>
+	sum the total amount and use that as a guideline.
+      </li>
+      <li>
 	Remember to add extra charges!! Stock Photo, Domain 
-	Registration, Hosting Fees (if applicable) software (if needed), etc.</li>
-	<li>
+	Registration, Hosting Fees (if applicable) software (if needed), etc.
+      </li>
+      <li>
 	Include a breakdown of tasks, who is responsible, how 
-	many hours it will take and the total for each phase.</li>
-</ul>
-
-<p>
-<b>Project Plan</b></p>
-<ul>
+	many hours it will take and the total for each phase.
+      </li>
+    </ul>
+  </section>
+  <section>
+    <header>
+      <h3>Project Plan</h3>
+    </header>
+    <p>
+      Next comes the Project plan
+    </p>
+    <p>
+      You might spend a lot of time working on this, 
+      particularly if you are assembling a team or if the project is very large or 
+      lengthy
+    </p>
+    <section>
+      <header>
+	<h4>Components of a Project Plan:</h4>
+      </header>
+      <ul>
 	<li>
-
-	Next comes the Project plan</li>
-	<li>
-	You might spend a lot of time working on this, 
-	particularly if you are assembling a team or if the project is very large or 
-	lengthy</li>
-	<li>
-	Components of a Project Plan:
- 	<ul>
-		<li><b>
-		Overview</b>: The executive summary. What will be 
-		accomplished in broad strokes.</li>
-
-		<li><b>
-		Schedule</b>: This might be somewhat rough to begin with, 
-		but this will come out of conversations with the client and with the 
-		team. </li>
-		<li>
-		Schedule may also have some critical dates (like 
-		promotional campaign start, etc) that need to be expressly identified.</li>
-		<li>
-		Talk to your client! Make sure that the dates are 
-		achieveable by YOU AND BY THEM!</li>
-		<li><b>
-
-		Budget</b>: Another area that may change during the review of 
-		the project. Be prepared to defend the budget</li>
-		<li><b>
-		Audience: </b>
-		Placing this in the project plan is crucial, 
-		as this will become the main reference document throughout the project. 
-		Make sure that you include Personas (examples available)</li>
-		<li><b>
-		Testing Plan: </b>
-
-		Clearly identify 
-		what/how testing will occur, both on users and the site itself.</li>
-		<li><b>
-		Details and Assumptions: </b>
-		Often overlooked, it 
-		is important to include as a clarifier. This is where all of the 
-		assumptions by the developer are outlined. 
-		<ul>
-			<li>
-			Examples:</li>
-			<li>
-
-			The development of (site A) is limited to HTML 
-			coding of X sections and Y pages (if known)</li>
-			<li>
-			The budget is only an estimate based on information 
-			given as of (date). Variance may occur with changes in the project 
-			plan. See Change Request Form in appendix B</li>
-			<li>
-			Overdue task delivery may be subject to extra 
-			charges outlined in appendix A</li>
-			<li>
-			Stock and Photo/Illustration illustration fees are 
-			the responsibility of the client. Approval for each item will be 
-			requested from the client before purchase.</li>
-
-		</ul>
-		</li>
-		<li><b>
-		SIGNATURE LINE</b>: 
-		This is MOST important! Make sure they sign this.</li>
-	</ul>
+	  <strong>Overview</strong>: The executive summary. What will be 
+	  accomplished in broad strokes.
 	</li>
-</ul>
-
-<p>
-
-<b>Kick it off!</b></p>
+	<li>
+	  <strong>Schedule</strong>: This might be somewhat rough to begin with, 
+	  but this will come out of conversations with the client and with the 
+	  team.
+	</li>
+	<li>
+	  Schedule may also have some critical dates (like 
+	  promotional campaign start, etc) that need to be expressly identified.
+	</li>
+	<li>
+	  Talk to your client! Make sure that the dates are 
+	  achieveable by YOU AND BY THEM!
+	</li>
+	<li>
+	  <strong>Budget</strong>: Another area that may change during the review of 
+	  the project. Be prepared to defend the budget
+	</li>
+	<li>
+	  <strong>Audience</strong>: 
+	  Placing this in the project plan is crucial, 
+	  as this will become the main reference document throughout the project. 
+	  Make sure that you include Personas (examples available)
+	</li>
+	<li>
+	  <strong>Testing Plan</strong>: Clearly identify what/how testing will occur,
+	  both on users and the site itself.
+	</li>
+	<li>
+	  <strong>Details and Assumptions</strong>:
+	  Often overlooked, it is important to include as a clarifier. This is
+	  where all of the assumptions by the developer are outlined. 
+	  <ul>
+	    <li>
+	      Examples:
+	    </li>
+	    <li>
+	      The development of (site A) is limited to HTML 
+	      coding of X sections and Y pages (if known)
+	    </li>
+	    <li>
+	      The budget is only an estimate based on information 
+	      given as of (date). Variance may occur with changes in the project 
+	      plan. See Change Request Form in appendix B
+	    </li>
+	    <li>
+	      Overdue task delivery may be subject to extra 
+	      charges outlined in appendix A
+	    </li>
+	    <li>
+	      Stock and Photo/Illustration illustration fees are 
+	      the responsibility of the client. Approval for each item will be 
+	      requested from the client before purchase.
+	    </li>
+	  </ul>
+	</li>
+	<li>
+	  <strong>SIGNATURE LINE</strong>:
+	  This is MOST important! Make sure they sign this.
+        </li>
+      </ul>
+    </section>
+  </section>
+</article>
+  <!--section>
+    <header>
+      <h4>Kick it off!</h4>
+    </header>
+  
 <ul>
 	<li>
 	Once you have the project plan signed off, have a 
