--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <ul>
         <li><a href="/jcajm/rationale.html">Rationale</a></li>
         <li><a href="comp1950/">COMP1950 - Proto Site</a></li>
-        <li><a href="http://teams.thenet.ca/jcajm/comp1950/index.shtml?week=09">COMP1950 - Lecture Page</a></li>
+        <li><a href="http://teams.thenet.ca/jcajm/comp1950/index.php?week=09">COMP1950 - Lecture Page</a></li>
         <li><a href="#">Site Map</a></li>
         <li><a href="#">Wire Frames</a></li>
       </ul>
