Added link to 'Moqups' wireframe
Wireframe for COMP1950 - Lecture Page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li><a href="comp1950/">COMP1950 - Proto Site</a></li>
         <li><a href="http://teams.thenet.ca/jcajm/comp1950/index.php?week=09">COMP1950 - Lecture Page</a></li>
         <li><a href="#">Site Map</a></li>
-        <li><a href="#">Wire Frames</a></li>
+        <li><a href="https://moqups.com/karetai1/Cxxg6F4w">Wire Frames</a></li>
       </ul>
     </nav>
         
